deployment/yaml/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: classic-order
  namespace: classic-sample-ns
  labels:
    app: classic-sample-application
    subname: order
spec:
  type: ClusterIP
  ports:
    - name: my-http
      port: 9090
      targetPort: my-http
  selector:
    app: classic-sample-application
    subname: order
